# ChatBot_Rust

./: .env  Cargo.toml  Dockerfile  README.md  leads.json
chatbot-backend/: Cargo.toml
public/: index.html
public/reports/: 29a4aff7-24d3-4d5e-835c-d67c5f733f5b.html  5d49946f-13c6-4816-afb4-703b589f3557.html
src/: error.rs  lib.rs  main.rs  message.rs  rules.rs  state.rs
src/routes/: chat.rs  mod.rs
src/services/: chatbot.rs  metrics_manager.rs  mod.rs  report_generator.rs  session_manager.rs
tests/: api_tests.rs  chatbot_tests.rs  session_manager_tests.rs
