[package]
name = "chatbot-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
uuid = { version = "1", features = ["v4"] }
printpdf = "0.3.2"
dotenvy = "0.15"
